--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
 email: pr@csh.rit.edu
-baseurl: ""
+baseurl: blog.csh.rit.edu
 paginate: 5
 paginate_path: "/blog/page-:num"
 google_analytics: 
 
 # SEO settings
-title: Computer Science House
-description: 
-url: ""
+title: Computer Science House Blog
+description: Computer Science House at RIT's Blog
+url: blog.csh.rit.edu
 twitter_username: 
 default_img: 
 
