--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 email: pr@csh.rit.edu
-baseurl: blog.csh.rit.edu
+baseurl:
 paginate: 5
 paginate_path: "/blog/page-:num"
 google_analytics: 
