Add build exclusions to Jekyll config

--- a/_config.yml
+++ b/_config.yml
@@ -29,4 +29,15 @@ sass:
   style: compressed
 
 # Gems
-gems: [jekyll-paginate, jekyll-sitemap, octopress-autoprefixer]
+gems:
+- jekyll-paginate
+- jekyll-sitemap
+- octopress-autoprefixer
+
+# Build Exclusions
+exclude:
+- vendor
+- Gemfile
+- Gemfile.lock
+- README.md
+- LICENSE.txt
